force-app/main/default/objects/PT_HttpResponseMock__mdt/PT_HttpResponseMock__mdt.object-meta.xml
<CustomObject>
    <label>PT_HttpResponseMock</label>
    <pluralLabel>PT_HttpResponseMocks</pluralLabel>
</CustomObject>