force-app/main/default/objects/PT_HttpResponseMock__mdt/fields/PT_Body__c.field-meta.xml
<CustomField>
    <fullName>PT_Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>