force-app/main/default/objects/PT_HttpResponseMock__mdt/fields/PT_Description__c.field-meta.xml
<CustomField>
    <fullName>PT_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>