force-app/main/default/objects/PT_HttpResponseMock__mdt/fields/PT_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>PT_StatusCode__c</fullName>
    <label>Status Code</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>